--- a/apps/ollama-tauri-qwik/package.json
+++ b/apps/ollama-tauri-qwik/package.json
@@ -25,6 +25,7 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik"
+    "qwik": "qwik",
+    "tauri": "tauri"
   }
 }
