--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@builder.io/qwik": "^1.12.0",
     "@builder.io/qwik-city": "^1.12.0",
+    "@tauri-apps/api": "^2.2.0",
     "@tauri-apps/cli": "^2.2.7",
     "@types/eslint": "8.56.10",
     "@types/node": "20.14.11",
