--- a/package.json
+++ b/package.json
@@ -6,26 +6,27 @@
   "scripts": {
     "dev": "pnpm --filter './apps/*' tauri dev",
     "build": "pnpm --filter './apps/*' tauri build",
+    "bundle": "pnpm --filter './apps/*' tauri bundle --bundles app,dmg",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Van Vuong Ngo <20791239+vanvuongngo@users.noreply.github.com>",
   "license": "MIT",
   "devDependencies": {
-    "@builder.io/qwik": "^1.12.0",
-    "@builder.io/qwik-city": "^1.12.0",
-    "@tauri-apps/api": "^2.2.0",
-    "@tauri-apps/cli": "^2.2.7",
-    "@types/eslint": "8.56.10",
-    "@types/node": "20.14.11",
-    "@typescript-eslint/eslint-plugin": "7.16.1",
-    "@typescript-eslint/parser": "7.16.1",
-    "eslint": "8.57.0",
-    "eslint-plugin-qwik": "^1.12.0",
-    "prettier": "3.3.3",
-    "typescript": "5.4.5",
-    "undici": "*",
-    "vite": "5.3.5",
-    "vite-tsconfig-paths": "^4.2.1"
+    "@builder.io/qwik": "^1.14.1",
+    "@builder.io/qwik-city": "^1.14.1",
+    "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/cli": "^2.5.0",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^22.15.21",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^9.27.0",
+    "eslint-plugin-qwik": "^1.14.1",
+    "prettier": "^3.5.3",
+    "typescript": "^5.4.5",
+    "undici": "^7.10.0",
+    "vite": "^6.3.5",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
